<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/roundshape">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info" 
            android:layout_marginRight="20dp"
            android:textColor="#FFFFFF"
            android:padding="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/sep1"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/linearLayout1"
        android:background="#93D116" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/sep1"
        android:layout_above="@+id/sep2">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F4F4F4"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/icon" 
                android:layout_margin="10dp" 
                android:scaleType="fitXY"/>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_margin="3dp">

                <TextView
                    android:id="@+id/center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/appname_ug"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/appname_ug"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
                    android:gravity="center_horizontal"
                    android:textSize="21dp"
                    android:textColor="#000000"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/appname_en"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/center"
                    android:layout_below="@+id/appname_ug"
                    android:gravity="right"
                    android:text="@string/app_name_en" 
                    android:textColor="#000000"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/appname_cn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/center"
                    android:layout_below="@+id/appname_ug"
                    android:text="@string/app_name_cn" 
                    android:textColor="#000000"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/appname_cn"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:text="@string/version" />

            </RelativeLayout>

            <TextView
                android:id="@+id/app_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_info_content" 
                android:gravity="center" 
                android:textColor="#000000"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/new_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_new" 
                android:textColor="#000000"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@+id/newapp_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_new_content" 
                android:paddingLeft="10dp" 
                android:paddingRight="20dp" 
                android:textColor="#000000"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/copyright"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright" 
                android:textColor="#000000"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@+id/copyright_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright_content" 
                android:paddingLeft="10dp" 
                android:textColor="#000000"
                android:paddingRight="20dp"/>
            <TextView
                android:id="@+id/copyright_content_en"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright_content_en" 
                android:gravity="center"
                android:autoLink="web"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/bilkan_inc_logo" 
                android:layout_margin="10dp" 
                android:scaleType="fitXY"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/sep2"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_above="@+id/btnclose"
        android:background="#93D116"/>

    <Button
        android:id="@+id/btnclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_above="@+id/sep3"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:padding="5dp"
        android:textSize="17dp"
        android:text="@string/close" 
        android:layout_marginTop="20dp"/>
    
    <TextView
        android:id="@+id/sep3"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>